--- a/assets/index.html
+++ b/assets/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head>
-    <meta charset=utf-8" />
+    <meta charset="utf-8" />
     <title> Las locuras del emperador</title>
     <meta name="author" content="Matias Salinas" />
     <meta name="description" content="Pagina ejercicio 02 desafio latam Front End" />
