--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="keywords"  content="Desafio, desafio latam, ejercicio" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" type="text/css" href="css/fonts.css" />
-    <link rel="stylesheet" type="text/css" href="css/emperador.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/fonts.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/emperador.css" />
 
 
 </head>
@@ -22,7 +22,7 @@
 	</header>
 
 	<section class="cuzco">
-		<img class="img-01" src="images/cuzco.jpg">
+		<img class="img-01" src="assets/images/cuzco.jpg">
 	</section>
 
 	<section class="izma">
